label inline block on tablet - fixes #23

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,6 +1,8 @@
 label {
-  display: inline-block;
-  width: 8em;
+  @include breakpoint($tablet) {
+    display: inline-block;
+    width: 8em;
+  }
 }
 
 .form-text {
